--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>ini adalah teset github push</p>
+    <p>ini adalah teset github push, push ke 2</p>
 </body>
 </html>
